--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -6,13 +6,23 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Tab2">
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:text="University Details"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"/>
     <com.google.android.material.card.MaterialCardView
+        android:layout_below="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        android:layout_centerInParent="true">
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
